--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -31,8 +31,8 @@
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 
-    <script type="text/javascript" src="js/accessKey.js"></script>
-    <script type="text/javascript" src="js/index.js"></script>
+    <script type="text/javascript" src="{{ url_for('static',filename='js/accessKey.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static',filename='js/index.js') }}"></script>
     
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCsbDZ3lAcNuR5wKp3xSaDa_UIbvyqdyKo&signed_in=true" async defer></script>
 
