--- a/client/www/css/index.css
+++ b/client/www/css/index.css
@@ -32,6 +32,7 @@ body {
 }
 
 #map {
+  z-index:5
   height: 100%;
   width:100%;
 }
@@ -40,10 +41,18 @@ body {
   position:absolute;
   top:0px;
   left:0px;
-  z-index:1001;
+  z-index:10;
   height: 100%;
   width:100%;
   background-color: rgba(0, 0, 0, 0);
+}
+
+#picture {
+  position:absolute;
+  top:10%;
+  width:100%;
+  z-index: 20;
+  display:none;
 }
 
 /* Landscape layout (with min-width) */
