--- a/client/www/css/index.css
+++ b/client/www/css/index.css
@@ -19,17 +19,35 @@ body {
     height:100%;
 }
 
-#dicks{
+nav{
   z-index:1000;
   position:absolute;
   top:0px;
   left:0px;
-  background:#fff;
-  height:25px;
-  width:100px;
+  background:#E95B47;
+  height:50px;
+  width:100%;
   display:inline-block;
   text-align:center;
 }
+
+#info-icon{
+  height:35px;
+  width:35px;
+  position:absolute;
+  top:7px;
+  right:7px;
+}
+
+#nav-logo{
+  height:35px;
+  position: absolute;
+  left:15px;
+  top:10px;
+}
+
+
+
 
 #map {
   z-index:5
@@ -51,7 +69,7 @@ body {
   font-family: 'rokkittregular';
   font-size: 36px;
   color:#CB2029;
-  padding-top:20px;
+  padding:0px 0 30px 0;
 }
 
 #modal{
@@ -64,12 +82,56 @@ body {
   width:100%;
   margin-top:50px;
   background:#FFF;
+  font-family: latolightitalic;
+}
+
+.step{
+  width:250px;
+  height:50px;
+  margin:0 auto;
+  text-align: left;
+  margin-bottom:30px;
+
+  position:relative;
+}
+
+.step img {
+  width:50px;
+  height:50px;
+  position:relative;
+  display:inline-block;
+  padding-left: 20px;
+}
+
+.text{
   font-family: latolight;
+  display:inline-block;
+  width:150px;
+  position:absolute;
+  top:10px;
+  left:90px;
+  font-size: 16px
+}
+
+#go-button{
+  color:#fff;
+  width:120px;
+
+  position:absolute;
+  margin:0 auto;
+  bottom:30px;
+  left:calc(50% - 60px);
+  padding: 10px 0 5px 0;
+  text-align: center;
+  font-family: rokkittregular;
+  font-size: 42px;
+  background:#E95B47;
   border-radius: 5px;
 }
 
 #description{
-  margin:10px 20px;
+  margin:10px 40px;
+  padding:10px 0 10px 0;
 }
 
 #picture {
